// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkAuth() should throw checkAuthError() when there is no session 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`checkAuth() should trigger checkAuthDone() when success 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`getToken() should throw loginFailed() if the generator throws error 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "undefined/auth/token",
        Object {
          "headers": Object {
            "authorization": "Basic Og==",
          },
          "method": "POST",
        },
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`getToken() should trigger loginFailed() no response returned 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "undefined/auth/token",
        Object {
          "headers": Object {
            "authorization": "Basic Og==",
          },
          "method": "POST",
        },
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`getToken() should trigger loginFailed() when API returned falsy success 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "undefined/auth/token",
        Object {
          "headers": Object {
            "authorization": "Basic Og==",
          },
          "method": "POST",
        },
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`getToken() should trigger loginSuccess() when success 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        "undefined/auth/token",
        Object {
          "headers": Object {
            "authorization": "Basic Og==",
          },
          "method": "POST",
        },
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;
